# unireg

./: .gitignore  AGENTS.md  README.md  VISION.md  pyproject.toml
benchmark/: README.md
benchmark/parser/: core_parser_cases.jsonl  parser_cases.schema.json
benchmark/questions/: core_questions.jsonl  questions.schema.json
benchmark/retrieval/: predictions.sample.jsonl  predictions.schema.json
docs/: NOTES.md  architecture.md  coding_style.md  data_model.md  implementation_plan.md  incompleteness.md  milestone11_benchmark.md  milestone12_retrieval.md  milestone13_5_error_analysis.md  milestone13_grounded_qa.md  milestone14_experiments.md  paper_plan.md  parser_design.md  parser_spec.md  rag_design.md  research_notes.md  review_milestone11.md  review_milestone12.md  review_milestone13.md  review_milestone13_5.md  review_milestone14.md  roadmap.md
experiments/configs/: sample_offline.json
scripts/: check_eval_pdfs.py  check_pdfs.py  unireg_analyze_errors.py  unireg_benchmark.py  unireg_experiment.py  unireg_qa.py  unireg_retrieval.py
tests/: test_amendments.py  test_benchmark.py  test_citations.py  test_cleaner.py  test_error_analysis.py  test_eval_script.py  test_experiments.py  test_exporters.py  test_metadata.py  test_models.py  test_parser.py  test_patterns.py  test_pdf_corpus.py  test_pdf_loader.py  test_projections.py  test_qa.py  test_references.py  test_retrieval.py
unireg/: __init__.py  citations.py  cli.py  models.py  projections.py
unireg/analysis/: __init__.py  __main__.py  classifier.py  cli.py  loader.py  models.py  reports.py  runner.py
(+59 files in other folders)
