[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unireg"
version = "0.1.0"
description = "Parser for Korean university regulations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=5.0",
]

[project.scripts]
unireg = "unireg.cli:main"
unireg-error-analysis = "unireg.analysis.cli:main"
unireg-experiment = "unireg.experiments.cli:main"
unireg-benchmark = "unireg.benchmark.cli:main"
unireg-qa = "unireg.qa.cli:main"
unireg-retrieval = "unireg.retrieval.cli:main"

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["unireg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "corpus: opt-in tests that parse every PDF under examples/pdf",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py312"]
